# pgwm

./: .dockerignore  .gitignore  Cargo.toml  Changelog.md  Dockerfile  EWMH.md  README.md  TODO.md  Todo.md  action.yml  build_wm.sh  check.sh  check_make.sh  configure  deny.toml  dump.txt  keep-stack-sizes.x  minimal-build.dockerfile  pgwm.toml  pgwm_minimal.toml  rust-toolchain.toml  uninstall.sh
.cargo/: config.toml
.docker/: full-checks.dockerfile  minimal-build.dockerfile
.github/: Dockerfile
.github/workflows/: main.yml
.local/: build.sh  check.sh  check_make.sh  make_check.sh  wm_check.sh
docs/: USAGE.md
event-source/: Cargo.toml  init.log.completed
event-source/src/: main.rs
performance-test/event-collection/: Cargo.toml
performance-test/event-collection/src/: connection_inner.rs
performance-test/event-lib/: Cargo.toml
performance-test/event-lib/src/: lib.rs
performance-test/event-source/: Cargo.toml
performance-test/event-source/src/: main.rs
pgwm/: Cargo.toml  emit_stack_sizes.sh
pgwm-app/: Cargo.toml
pgwm-app/src/: error.rs  lib.rs  uring.rs  util.rs  wm.rs
pgwm-app/src/manager/: bar.rs  draw.rs  font.rs  mod.rs
pgwm-app/src/x11/: call_wrapper.rs  colors.rs  mod.rs  state_lifecycle.rs
pgwm-core/: Cargo.toml
pgwm-core/benches/: benchmark.rs
pgwm-core/src/: error.rs  lib.rs
pgwm-core/src/colors/: mod.rs
pgwm-core/src/config/: key_map.rs  mod.rs  mouse_map.rs  workspaces.rs
pgwm-core/src/geometry/: draw.rs  layout.rs  mod.rs
pgwm-core/src/render/: mod.rs
pgwm-core/src/state/: bar_geometry.rs  mod.rs  properties.rs  workspace.rs
pgwm-core/src/status/: checker.rs  cpu.rs  mod.rs  net.rs  time.rs
pgwm-core/src/status/sys/: mod.rs
pgwm-core/src/status/sys/bat/: mod.rs
pgwm-core/src/status/sys/cpu/: mod.rs
pgwm-core/src/status/sys/mem/: mod.rs
pgwm-core/src/status/sys/net/: mod.rs
pgwm-core/src/util/: load_cfg.rs  macros.rs  mod.rs  vec_ops.rs
pgwm-metrics/: Cargo.toml
pgwm-metrics/src/: lib.rs
pgwm-utils/: Cargo.toml
pgwm-utils/src/: lib.rs  macros.rs
pgwm/src/: error.rs  main.rs  wm.rs
pgwm/src/manager/: bar.rs  draw.rs  font.rs  mod.rs  spawn.rs
pgwm/src/x11/: call_wrapper.rs  client_message.rs  colors.rs  cookies.rs  mod.rs  state_lifecycle.rs
