[workspace]
members = ["pgwm", "pgwm-app", "pgwm-core", "pgwm-utils"]
resolver = "2"

[workspace.dependencies]
# Internal
pgwm-core = { path = "pgwm-core", default-features = false }
pgwm-utils = { path = "pgwm-utils", default-features = false }

# Managed
fontdue = { git = "https://github.com/MarcusGrass/fontdue", rev = "e32ae994890caccce9e4a7f7228a2f00f05e0238", default-features = false }

# Owned
# rusl = { git = "https://github.com/MarcusGrass/tiny-std", rev = "71e91bbde834286a9dd3a565678975252d6ed80d", default-features = false }
# tiny-std = { git = "https://github.com/MarcusGrass/tiny-std", rev = "71e91bbde834286a9dd3a565678975252d6ed80d", default-features = false }
rusl = { path = "../tiny-std/rusl", default-features = false }
tiny-std = { path = "../tiny-std/tiny-std", default-features = false }
# xcb-rust-connection = { git = "https://github.com/MarcusGrass/xcb-rust.git", rev = "0df48b0d4045144e8e9288b034a75f5983f5e2ab", default-features = false }
# xcb-rust-protocol = { git = "https://github.com/MarcusGrass/xcb-rust.git", rev = "0df48b0d4045144e8e9288b034a75f5983f5e2ab", default-features = false }
xcb-rust-connection = { path = "../xcb-rust/xcb-rust-connection", default-features = false }
xcb-rust-protocol = { path = "../xcb-rust/xcb-rust-protocol", default-features = false }
x11-keysyms = { git = "https://github.com/MarcusGrass/x11-keysyms", rev = "da4634c071fdc547772cd4dc7892d857b29dd6e5", features = ["miscellany", "latin1"] }

# External

atoi = { version = "2.0.0", default-features = false }

hashbrown = { version = "0.14.0", default-features = false }
heapless = { version = "0.7.16", default-features = false }

smallmap = { version = "1.4.1", default-features = false }
time = { version = "0.3.23", default-features = false }
unix-print = "0.1.0"
