[workspace]
members = ["pgwm", "pgwm-app", "pgwm-core", "pgwm-utils"]
resolver = "2"

[workspace.dependencies]
# Internal
pgwm-core = { path = "pgwm-core", default-features = false }
pgwm-utils = { path = "pgwm-utils", default-features = false }

# Managed
fontdue = { git = "https://github.com/MarcusGrass/fontdue", rev = "e32ae994890caccce9e4a7f7228a2f00f05e0238", default-features = false }

# Owned
# rusl = { git = "https://github.com/MarcusGrass/tiny-std", rev = "71e91bbde834286a9dd3a565678975252d6ed80d", default-features = false }
# tiny-std = { git = "https://github.com/MarcusGrass/tiny-std", rev = "71e91bbde834286a9dd3a565678975252d6ed80d", default-features = false }
rusl = { version = "0.3.0", default-features = false }
tiny-std = { version = "0.2.4", default-features = false }
# xcb-rust-connection = { git = "https://github.com/MarcusGrass/xcb-rust.git", rev = "0df48b0d4045144e8e9288b034a75f5983f5e2ab", default-features = false }
# xcb-rust-protocol = { git = "https://github.com/MarcusGrass/xcb-rust.git", rev = "0df48b0d4045144e8e9288b034a75f5983f5e2ab", default-features = false }
xcb-rust-connection = { version = "0.2.2", default-features = false }
xcb-rust-protocol = { version = "0.2.3", default-features = false }
x11-keysyms = { version = "0.1.0", features = ["miscellany", "latin1"] }

# External

atoi = { version = "2.0.0", default-features = false }

hashbrown = { version = "0.14.3", default-features = false }
heapless = { version = "0.8.0", default-features = false }

smallmap = { version = "1.4.2", default-features = false }
time = { version = "0.3.36", default-features = false }
