[package]
name = "pgwm-app"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
config-file = ["pgwm-core/config-file"]
default = ["xinerama", "status-bar", "config-file"]
debug = ["pgwm-core/debug", "xcb-rust-connection/debug", "xcb-rust-protocol/debug", "pgwm-utils/debug"]
xinerama = ["xcb-rust-connection/xinerama", "xcb-rust-protocol/render"]
status-bar = ["pgwm-core/status-bar", "time"]
perf-test = []

[dependencies]
hashbrown = { workspace = true, default-features = false }
heapless = { workspace = true, default-features = false }
fontdue = { workspace = true, default-features = false, features = ["simd"] }
pgwm-core = { workspace = true, default-features = false }
pgwm-utils = { workspace = true, default-features = false }
smallmap = { workspace = true, default-features = false }
time = { workspace = true, optional = true, default-features = false }
unix-print = { workspace = true }
tiny-std = { workspace = true, features = ["alloc"], default-features = false }
rusl = { workspace = true, default-features = false }

xcb-rust-connection = { workspace = true }
xcb-rust-protocol = { workspace = true }

[dev-dependencies]
tiny-std = { workspace = true, features = ["alloc"], default-features = false }
