[package]
name = "pgwm-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["xinerama", "status-bar"]
debug = ["pgwm-core/debug", "xcb-rust-connection/debug", "xcb-rust-protocol/debug", "pgwm-utils/debug"]
xinerama = ["xcb-rust-connection/xinerama", "xcb-rust-protocol/render"]
status-bar = ["pgwm-core/status-bar", "time"]
perf-test = []

[dependencies]
hashbrown = { workspace = true, default-features = false }
heapless = { workspace = true, default-features = false }
fontdue = { workspace = true, default-features = false, features = ["simd"] }
pgwm-core = { workspace = true, default-features = false }
pgwm-utils = { workspace = true, default-features = false }
smallmap = { workspace = true, default-features = false }
time = { workspace = true, optional = true, default-features = false }
tiny-std = { workspace = true, features = ["alloc"], default-features = false }
rusl = { workspace = true, default-features = false }

xcb-rust-connection = { workspace = true }
xcb-rust-protocol = { workspace = true }

[dev-dependencies]
tiny-std = { workspace = true, features = ["alloc"], default-features = false }
