[package]
name = "pgwm-core"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
status-bar = ["time"]
debug = ["xcb-rust-connection/debug", "xcb-rust-protocol/debug", "pgwm-utils/debug"]

[dependencies]
atoi = { workspace = true, default-features = false }
heapless = { workspace = true, default-features = false }
pgwm-utils = { workspace = true }
x11-keysyms = { workspace = true, features = ["miscellany", "latin1"] }

xcb-rust-connection = { workspace = true }
xcb-rust-protocol = { workspace = true }
tiny-std = { workspace = true , features = ["start", "alloc"], default-features = false }

time = { workspace = true, optional = true, default-features = false }
smallmap = { workspace = true, default-features = false }

[dev-dependencies]
tiny-bench = "0.3.0"
tiny-std = { workspace = true, features = ["alloc"], default-features = false }

[[bench]]
name = "benchmark"
harness = false
