[package]
name = "pgwm"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["xinerama", "status-bar"]
debug = ["pgwm-app/debug"]
xinerama = ["pgwm-app/xinerama"]
status-bar = ["pgwm-app/status-bar"]
perf-test = ["pgwm-app/perf-test"]

[dependencies]
pgwm-app = { path = "../pgwm-app", default-features = false }
tiny-std = { workspace = true, features = ["alloc", "executable", "global-allocator"], default-features = false }
