[package]
name = "event-collection"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2.5"
event-lib = { path = "../event-lib" }

[dependencies.x11rb]
version = "0.9.0"
features = ["all-extensions"]

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["async-await", "async-await-macro", "io", "std"]

[dependencies.futures-io]
version = "0.3"
default-features = false
